--- a/qemu-plugin/Cargo.toml
+++ b/qemu-plugin/Cargo.toml
@@ -13,15 +13,13 @@ version.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-anyhow = "1.0.99"
-once_cell = "1.21.3"
+anyhow = { version = "1.0.99", optional = true }
+num-traits = { version = "0.2.19", optional = true }
 qemu-plugin-sys = { workspace = true, default-features = false }
 thiserror = "2.0.16"
-num-traits = { version = "0.2.19", optional = true }
-ctor = "0.5.0"
 
 [target.'cfg(windows)'.dependencies]
-windows = { version = "0.61.3", features = [
+windows = { version = "0.62.0", features = [
     "Win32_System_WindowsProgramming",
     "Win32_System_LibraryLoader",
     "Win32_Foundation",
@@ -45,7 +43,12 @@ plugin-api-v3 = ["qemu-plugin-sys/plugin-api-v3"]
 plugin-api-v4 = ["qemu-plugin-sys/plugin-api-v4"]
 # Use the V5 plugin API, which is defined starting in version 10.1.0
 plugin-api-v5 = ["qemu-plugin-sys/plugin-api-v5"]
+# Enable the `num-traits` dependency, which enables endian-aware register read
+# operations
 num-traits = ["dep:num-traits"]
+# Enable the `anyhow` dependency, which provides compatibility for converting
+# from `anyhow::Error` to a `qemu_plugin::Error`
+anyhow = ["dep:anyhow"]
 
 [lints.rust]
 incomplete-features = "allow"
